--- a/style.css
+++ b/style.css
@@ -2,13 +2,23 @@
 	box-sizing: border-box;
 }
 
-body, html {
+html {
 	padding: 0px;
 	margin: 0px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-weight: 500;
 	padding: 2em;
+	transition-timing-function: ease 3s;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	align-self: center;
+    align-items: center;
+    gap: 1em;
+    transition-timing-function: ease 3s;
 }
 
 p {
@@ -16,4 +26,22 @@ p {
 	font-style: normal;
 	font-weight: 300;
 	max-width: 50em;
+	white-space: pre-line;
+	background-color: lightgray;
+	border-radius: 1em;
+	padding: 1em;
+	transition-timing-function: ease 3s;
+}
+
+#output {
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	font-style: normal;
+	font-weight: 300;
+	max-width: 50em;
+	white-space: pre-line;
+	background-color: white;
+	color: white;
+	border-radius: 1em;
+	padding: 1em;
+	transition-timing-function: ease 3s;
 }
